--- a/index.html
+++ b/index.html
@@ -11110,8 +11110,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 &lt;/$reveal&gt;
 &lt;/div&gt;</pre>
 </div>
-<div bag="default" created="20200106211749103" modified="20210925104111735" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
-<pre>[[Notice]]
+<div bag="default" created="20200106211749103" modified="20211029081311497" revision="0" title="$:/DefaultTiddlers" type="text/vnd.tiddlywiki">
+<pre>[[Bartlett Design and Creative Practice]]
+[[Notice]]
 [[Hello]]</pre>
 </div>
 <div created="20210925070021922" modified="20210925070021922" title="$:/GitHub/Branch">
@@ -12957,7 +12958,7 @@ exports.context = contextWidget;
 <div created="20210927072623264" modified="20210927072642624" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210925061535835" modified="20210927072621232" title="$:/state/tab-1749438307">
+<div created="20210925061535835" modified="20211029081259127" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210925061539666" modified="20210925061539666" title="$:/state/tab-2065006209">
@@ -12966,7 +12967,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20211029080811228" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20211029081327335" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13047,7 +13048,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211029071824533" list="" modified="20211029080804116" title="$:/StoryList">
+<div created="20211029081024395" list="" modified="20211029081320552" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
