--- a/index.html
+++ b/index.html
@@ -13048,7 +13048,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211029081024395" list="" modified="20211029081320552" title="$:/StoryList">
+<div created="20211108114654144" list="About [[Bartlett Design and Creative Practice]] Notice Hello" modified="20211108114913114" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13231,12 +13231,20 @@ A KISS IS JUST A KISS is an interactive public ritual that uses the convention o
 
 OPR is a service that creates bespoke rituals for significant occasions or life events. Iniva has commissioned a ritual performance from OPR for public presentation.</pre>
 </div>
-<div created="20210925095952706" modified="20210925113911334" tags="TableOfContents" title="About">
-<pre>''Long bio''
+<div created="20210925095952706" modified="20211108114956991" tags="TableOfContents" title="About">
+<pre>''50 word bio''
 
-Jack makes work that explores the connection between the social, the legal and art. Using social relations and cultural norms as material, he creates performances, performatives, sculpture, video and participatory projects that highlight the rules — customs, rituals, habits and theories — that guide human behaviour. As part of Jack’s social practice, he blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking.
+Jack Ky Tan uses law, policy and customs as a medium of making art, highlighting the rules that guide human behaviour. Blurring the boundaries between art and governance, Jack also helps organisations reform and revision themselves using artistic thinking. Jack trained as a lawyer and has a [[PhD]] in legal aesthetics.
 
-Prior to becoming an artist, Jack graduated from Hull University Law School, completed and MA in Social Justice and Education at UCL, worked in civil litigation, trained as a lawyer, and undertook  human rights case, policy and anti-racist campaigning work in UK based NGOs. He then studied ceramics, obtaining a BA from the University of Westminster and an MA from the Royal College of Art. In 2020, Jack completed his Ph.D in legal aesthetics and performance at the University of Roehampton, Dept of Drama, Theatre and Performance. 
+''100 word bio''
+
+Jack Ky Tan uses law, policy, social norms and customs as a medium of making art. He creates performances, sculpture and participatory projects that highlight the rules that guide human behaviour.  In Jack’s social practice, he blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking. Jack trained as a lawyer and worked in civil rights NGOs before becoming an artist. Jack’s practice-led [[PhD]] at Roehampton University explored legal aesthetics and performance art.  He has taught sculpture at the Royal College of Art and University of Brighton, and politics at Goldsmiths.
+
+''Long bio''
+
+Jack Ky Tan makes work that explores the connection between the social, the legal and art. Using social relations and cultural norms as material, he creates performances, performatives, sculpture, video and participatory projects that highlight the rules — customs, rituals, habits and theories — that guide human behaviour. As part of Jack’s social practice, he blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking.
+
+Prior to becoming an artist, Jack graduated from Hull University Law School, completed and MA in Social Justice and Education at UCL, worked in civil litigation, trained as a lawyer, and undertook  human rights case, policy and anti-racist campaigning work in UK based NGOs. He then studied ceramics, obtaining a BA from the University of Westminster and an MA from the Royal College of Art. In 2020, Jack completed his [[PhD]] in legal aesthetics and performance at the University of Roehampton, Dept of Drama, Theatre and Performance. 
 
 Current projects include Devising Governance (2021-22), a year-long experiment of creating organisational policy as performance scores via the process of making sculpture (Scottish Sculpture Workshop); Board Artist-in-Residence at FACT Liverpool (2021-22); and Decolonizing Constitutions (2020-ongoing), a training workshop that deconstructs coloniality in governance documents using techniques of poetry and textual analysis.
 
@@ -13245,10 +13253,6 @@ Recent projects include //Learning Nonhuman// (2021) at FACT Liverpool, a game 
 He was the Special Projects Curator for //fig-2//, a year-long series of 50 exhibitions in 50 weeks at the ICA London, and has also curated shows for Wiltshire Creative (Salisbury) and arebyte (London).  He teaching experience includes: MA Sculpture Royal College of Art (2011-2013), MA Art &amp; Politics at Goldsmiths (2018), BA (Hons) Sculpture at Brighton University (2012-2016), BA (Hons) Fine Art at Goldsmiths (2015-2017), BA (Hons) Theatre at Roehampton University (2013-2015).
 
 Born in Singapore, Jack is based in Galloway, Southwest Scotland.
-
-''100 Word Bio''
-
-Jack Tan uses law, policy, social norms and customs as a medium of making art. He creates performances, sculpture and participatory projects that highlight the rules that guide human behaviour.  In Jack’s social practice, he blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking. Jack trained as a lawyer and worked in civil rights NGOs before becoming an artist. Jack’s practice-led Ph.D at Roehampton University explored legal aesthetics and performance art.  He has taught sculpture at the Royal College of Art and University of Brighton, and politics at Goldsmiths.
 
 Download or view [[my CV|https://docs.google.com/document/d/e/2PACX-1vTu8LFsK2d2hs331z1Qi97s11_OIFR2HkSKkiUDyCkMD2Hi_OVLenhOoYDPPA0EettnPpCUiIJFMg9z/pub]].
 
