--- a/index.html
+++ b/index.html
@@ -13231,10 +13231,10 @@ A KISS IS JUST A KISS is an interactive public ritual that uses the convention o
 
 OPR is a service that creates bespoke rituals for significant occasions or life events. Iniva has commissioned a ritual performance from OPR for public presentation.</pre>
 </div>
-<div created="20210925095952706" modified="20211108114956991" tags="TableOfContents" title="About">
+<div created="20210925095952706" modified="20211108120012926" tags="TableOfContents" title="About">
 <pre>''50 word bio''
 
-Jack Ky Tan uses law, policy and customs as a medium of making art, highlighting the rules that guide human behaviour. Blurring the boundaries between art and governance, Jack also helps organisations reform and revision themselves using artistic thinking. Jack trained as a lawyer and has a [[PhD]] in legal aesthetics.
+Jack Ky Tan highlights the rules that guide human behaviour by using law, policy and custom as art medium. Blurring boundaries between art and governance, Jack also helps organisations reform and revision themselves using artistic thinking. Trained in law, Jack also studied ceramics and has a [[PhD]] in legal aesthetics.
 
 ''100 word bio''
 
