--- a/index.html
+++ b/index.html
@@ -12993,14 +12993,14 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20211109140822115" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210925062958213" modified="20211109142701220" title="$:/state/tab/sidebar--595412856">
+<pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20210925122403466" modified="20211109140419972" title="$:/state/toc/TableOfContents-Concepts--118161433">
-<pre>open</pre>
+<div created="20210925122403466" modified="20211109142702187" title="$:/state/toc/TableOfContents-Concepts--118161433">
+<pre>close</pre>
 </div>
 <div created="20210926083300728" modified="20211005144728871" title="$:/state/toc/TableOfContents-Curating--118161433">
 <pre>close</pre>
@@ -13077,7 +13077,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211109105241633" list="[[critical trusteeship]] Notice [[Trustee's duties, liability and criticality]]" modified="20211109141138865" title="$:/StoryList">
+<div created="20211109105241633" list="" modified="20211109141138865" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14497,7 +14497,7 @@ expect higher standards from trustees who act in a professional capacity or are 
 &lt;br&gt;
 Reference: The Essential Trustee - [[Trustees' duties at a glance|https://www.gov.uk/government/publications/the-essential-trustee-what-you-need-to-know-cc3/the-essential-trustee-what-you-need-to-know-what-you-need-to-do#trustees-duties-at-a-glance]]</pre>
 </div>
-<div created="20211109121404645" modified="20211109140818581" tags="charities Talks" title="Trustee's duties, liability and criticality">
+<div created="20211109121404645" modified="20211109142556486" tags="charities Talks" title="Trustee's duties, liability and criticality">
 <pre>Signposts for LUX trustees (9 Nov 2021 roundtable)
 
 !!A roundtable workshop discussion about trustee's duties, liabilities and developing a critical trusteeship.
@@ -14511,7 +14511,7 @@ First half - What are trustees' current duties and liabilities?
 |4.00pm|Hellos, introductions|Ben|
 |4.05pm|Check-ins and plan for the roundtable|Jack|
 |4.10pm|Exercise 1: Let's start a charity|Jack|
-|4.25pm|Exercise 2: Small group research on charitable (1) Purposes/Benefit, (2) Trustee Roles, (3) Governing document &amp; laws|All|
+|4.25pm|Exercise 2: Small group research on &lt;br&gt;(1) charitable Purposes/Benefit, &lt;br&gt;(2) Trustee Roles, &lt;br&gt;(3) Governing document &amp; laws|All|
 |4.45pm|Report back to big group|All|
 |5.00pm|Summarise|Jack|
 |5.10pm|BREAK|All|
