--- a/index.html
+++ b/index.html
@@ -427,6 +427,8 @@ Error message and password prompt
 
 <li>Bartlett Design and Creative Practice</li>
 
+<li>charitable purposes</li>
+
 <li>charities</li>
 
 <li>charity structure</li>
@@ -12993,13 +12995,13 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20211109142701220" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20211109143911603" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20210925122403466" modified="20211109142702187" title="$:/state/toc/TableOfContents-Concepts--118161433">
+<div created="20210925122403466" modified="20211109143912778" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926083300728" modified="20211005144728871" title="$:/state/toc/TableOfContents-Curating--118161433">
@@ -13077,7 +13079,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211109105241633" list="" modified="20211109141138865" title="$:/StoryList">
+<div created="20211109105241633" list="" modified="20211109143848924" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13318,6 +13320,46 @@ Contact or connect with me [[here|Contact]].
 * [[Karaoke Court documents]]
 * [[Karaoke Court space]]
 </pre>
+</div>
+<div created="20211109143355739" modified="20211109143839868" tags="charities" title="charitable purposes">
+<pre>[img[https://www.oscr.org.uk/media/2498/cps.png?width=571px&amp;height=738px]]
+
+''In England and Wales:''
+
+The 13 descriptions of purposes listed in the Charities Act are:
+
+(a) the prevention or relief of poverty
+
+(b) the advancement of education
+
+(c) the advancement of religion
+
+(d) the advancement of health or the saving of lives
+
+(e) the advancement of citizenship or community development
+
+(f) the advancement of the arts, culture, heritage or science
+
+(g) the advancement of amateur sport
+
+(h) the advancement of human rights, conflict resolution or reconciliation or the promotion of religious or
+racial harmony or equality and diversity
+
+(i) the advancement of environmental protection or improvement
+
+(j) the relief of those in need, by reason of youth, age, ill-health, disability, financial hardship or
+other disadvantage
+
+(k) the advancement of animal welfare
+
+(l) the promotion of the efficiency of the armed forces of the Crown, or of the efficiency of the police, fire
+and rescue services or ambulance services
+
+(m) any other purposes currently recognised as charitable or which can be recognised as charitable by
+analogy to, or within the spirit of, purposes falling within (a) to (l) or any other purpose recognised as
+charitable under the law of England and Wales
+
+See the Charity Commission's [[full guidance|https://www.gov.uk/government/publications/charitable-purposes/charitable-purposes]].</pre>
 </div>
 <div created="20211108175016455" modified="20211108175017312" tags="Concepts" title="charities">
 <pre></pre>
@@ -14497,7 +14539,7 @@ expect higher standards from trustees who act in a professional capacity or are 
 &lt;br&gt;
 Reference: The Essential Trustee - [[Trustees' duties at a glance|https://www.gov.uk/government/publications/the-essential-trustee-what-you-need-to-know-cc3/the-essential-trustee-what-you-need-to-know-what-you-need-to-do#trustees-duties-at-a-glance]]</pre>
 </div>
-<div created="20211109121404645" modified="20211109142556486" tags="charities Talks" title="Trustee's duties, liability and criticality">
+<div created="20211109121404645" modified="20211109143908260" tags="charities Talks" title="Trustee's duties, liability and criticality">
 <pre>Signposts for LUX trustees (9 Nov 2021 roundtable)
 
 !!A roundtable workshop discussion about trustee's duties, liabilities and developing a critical trusteeship.
@@ -14530,6 +14572,8 @@ First half - What are trustees' current duties and liabilities?
 [[critical trusteeship]]
 
 [[charity structure]]
+
+[[charitable purposes]]
 
 [[What is a trust?|trusts]]</pre>
 </div>
