--- a/index.html
+++ b/index.html
@@ -13084,7 +13084,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Notice Hello [[Bartlett Design and Creative Practice]] [[Roundtable on Trustee's duties]]" title="$:/StoryList">
+<div created="20211112090405716" list="About Notice Hello [[Bartlett Design and Creative Practice]] [[Roundtable on Trustee's duties]]" modified="20211112090405716" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13267,14 +13267,25 @@ A KISS IS JUST A KISS is an interactive public ritual that uses the convention o
 
 OPR is a service that creates bespoke rituals for significant occasions or life events. Iniva has commissioned a ritual performance from OPR for public presentation.</pre>
 </div>
-<div created="20210925095952706" modified="20211108120012926" tags="TableOfContents" title="About">
-<pre>''50 word bio''
+<div created="20210925095952706" modified="20211112101307278" tags="TableOfContents" title="About">
+<pre>I have been writing my bios for many many years starting in art school and the ones below show the word length of bios that have been requested of me over the years. They map institutional expectations and tell you more about what the arts communications industry wants than about presenting an artist's practice in text. Had I been brave enough, maybe I would have continued writing my artist bio in the somewhat naieve way that I did for my BA degree show so long ago (see bottom of this page).
+
+---------
+''50 word bio''
 
 Jack Ky Tan highlights the rules that guide human behaviour by using law, policy and custom as art medium. Blurring boundaries between art and governance, Jack also helps organisations reform and revision themselves using artistic thinking. Trained in law, Jack also studied ceramics and has a [[PhD]] in legal aesthetics.
 
 ''100 word bio''
 
 Jack Ky Tan uses law, policy, social norms and customs as a medium of making art. He creates performances, sculpture and participatory projects that highlight the rules that guide human behaviour.  In Jack’s social practice, he blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking. Jack trained as a lawyer and worked in civil rights NGOs before becoming an artist. Jack’s practice-led [[PhD]] at Roehampton University explored legal aesthetics and performance art.  He has taught sculpture at the Royal College of Art and University of Brighton, and politics at Goldsmiths.
+
+''200 word bio''
+
+Jack Ky Tan makes work that explores the connection between the social, the legal and art. Using social relations and cultural norms as material, he creates works of visual, performance and participatory art that highlight the rules — customs, rituals, habits and theories — that guide human behaviour. Jack’s social practice also blurs the boundaries between art, governance and consultancy in order to help organisations reform and revision themselves using artistic thinking.
+
+Prior to becoming an artist, Jack graduated from Hull University Law School, completed and MA in Social Justice and Education at UCL, worked in commercial litigation, trained as a lawyer, and undertook human rights casework and anti-racist campaigning. He then studied ceramics, obtaining a BA from the University of Westminster and an MA from the Royal College of Art. Jack also holds a [[PhD]] in legal aesthetics and performance at the University of Roehampton, Dept of Drama, Theatre and Performance.
+
+As an artist-curator, Jack has curated exhibitions for the ICA London, Wiltshire Creative, the Salisbury International Arts Festival, Royal College of Art, arebyte gallery (London) and Lewisham Arthouse. He has also taught sculpture at the Royal College of Art and University of Brighton, and politics at Goldsmiths.
 
 ''Long bio''
 
@@ -13295,7 +13306,10 @@ Download or view [[my CV|https://docs.google.com/document/d/e/2PACX-1vTu8LFsK2d2
 Download [[an image of me|https://www.dropbox.com/s/uwaebx4ifpblzex/JackTan2015_Art-School-Surgery_ICA-Singapore.jpg?dl=0]].
 
 Contact or connect with me [[here|Contact]].
-</pre>
+
+---------
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/bio%20harrow%20degree%20show1.jpg?raw=true]]</pre>
 </div>
 <div created="20210927081650216" modified="20210927081650216" title="Actor-Network Theory">
 <pre></pre>
