--- a/index.html
+++ b/index.html
@@ -13143,7 +13143,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211203130809185" list="" modified="20211203131142823" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13589,7 +13589,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 <div created="20210926083255345" modified="20210926083256650" tags="TableOfContents" title="Curating">
 <pre></pre>
 </div>
-<div created="20210926060749489" modified="20211203125715998" tags="TableOfContents" title="Current and Recent Work">
+<div created="20210926060749489" modified="20211203131327386" tags="TableOfContents" title="Current and Recent Work">
 <pre>[[S: E: P: A: L: S: An Intersectional Approach to Care and Safety|SEPALS conference]] (Dec 2022) - SEPALS is a half day event and future publication that takes a more focused understanding of how we can use care and safety in a more diverse way within curating, institutional decision making, commissioning and education. I will be speaking about what can happen beyond activism towards building a different ecosystem, also imagining the legal and governance shifts we might need for this. 
 
 [[Institutional Critique as Loving Activism]] (Nov 2021) - a provocation I wrote for Iniva's Future Collect Conference: Handle with Care 
@@ -13602,7 +13602,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Defund CFCCA]] (May 2021 and ongoing) - an artist-led campaign to call the Centre for Chinese Contemporary Art into account for perpetuating a culture of institutional racism and poor people management practices. 
 
-[[FACT Board Artist-in-Residence]] (Apr 2021 - May 2022 - As the inaugural artist-in-residence on the Board of Trustees at FACT Liverpool, I will be exploring ‘Boardness’ itself as artistic medium and as curatorial space. )
+[[FACT Board Artist-in-Residence]] (Apr 2021 - May 2022 - As the inaugural artist-in-residence on the Board of Trustees at FACT Liverpool, I will be exploring ‘Boardness’ itself as artistic medium and as curatorial space.
 
 [[Global Ethnic Majorities Board Association]] (Mar 2021 - ongoing) - GEMBA is an ongoing peer support network for arts trustees from global ethnic majority backgrounds. The aim is to create a confidential and supportive meeting space where trustees can meet and share knowledge. 
 
