--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@ Error message and password prompt
 
 <li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
 
+<li>$:/state/toc/TableOfContents-About--118161433</li>
+
 <li>$:/state/toc/TableOfContents-Concepts--118161433</li>
 
 <li>$:/state/toc/TableOfContents-Curating--118161433</li>
@@ -614,6 +616,8 @@ Error message and password prompt
 <li>Will You Won't You</li>
 
 <li>Writing</li>
+
+<li>Writing and press about my work</li>
 
 </ul>
 </p>
@@ -13059,11 +13063,14 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20211209080321624" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20211209081024498" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
+</div>
+<div created="20211209081213628" modified="20211209091022478" title="$:/state/toc/TableOfContents-About--118161433">
+<pre>close</pre>
 </div>
 <div created="20210925122403466" modified="20211209080318824" title="$:/state/toc/TableOfContents-Concepts--118161433">
 <pre>close</pre>
@@ -13167,7 +13174,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20211209070939677" list="" modified="20211209080424618" title="$:/StoryList">
+<div created="20211209070939677" list="" modified="20211209091015567" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -13350,8 +13357,16 @@ A KISS IS JUST A KISS is an interactive public ritual that uses the convention o
 
 OPR is a service that creates bespoke rituals for significant occasions or life events. Iniva has commissioned a ritual performance from OPR for public presentation.</pre>
 </div>
-<div created="20210925095952706" modified="20211112101307278" tags="TableOfContents" title="About">
+<div created="20210925095952706" modified="20211209091033450" tags="TableOfContents" title="About">
 <pre>I have been writing my bios for many many years starting in art school and the ones below show the word length of bios that have been requested of me over the years. They map institutional expectations and tell you more about what the arts communications industry wants than about presenting an artist's practice in text. Had I been brave enough, maybe I would have continued writing my artist bio in the somewhat naieve way that I did for my BA degree show so long ago (see bottom of this page).
+
+Download or view [[my CV|https://docs.google.com/document/d/e/2PACX-1vTu8LFsK2d2hs331z1Qi97s11_OIFR2HkSKkiUDyCkMD2Hi_OVLenhOoYDPPA0EettnPpCUiIJFMg9z/pub]].
+
+Download [[an image of me|https://www.dropbox.com/s/uwaebx4ifpblzex/JackTan2015_Art-School-Surgery_ICA-Singapore.jpg?dl=0]].
+
+Contact or connect with me [[here|Contact]].
+
+Writing or Press [[Writing and press about my work]].
 
 ---------
 ''50 word bio''
@@ -13384,11 +13399,6 @@ He was the Special Projects Curator for //fig-2//, a year-long series of 50 exh
 
 Born in Singapore, Jack is based in Galloway, Southwest Scotland.
 
-Download or view [[my CV|https://docs.google.com/document/d/e/2PACX-1vTu8LFsK2d2hs331z1Qi97s11_OIFR2HkSKkiUDyCkMD2Hi_OVLenhOoYDPPA0EettnPpCUiIJFMg9z/pub]].
-
-Download [[an image of me|https://www.dropbox.com/s/uwaebx4ifpblzex/JackTan2015_Art-School-Surgery_ICA-Singapore.jpg?dl=0]].
-
-Contact or connect with me [[here|Contact]].
 
 ---------
 
@@ -13567,7 +13577,7 @@ When people want to think differently they actually have to use a) a different a
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20210925113223427" modified="20210925122339762" tags="" title="Contact">
+<div created="20210925113223427" modified="20211209091020192" tags="About" title="Contact">
 <pre>💌 email me using [[this contact form|https://docs.google.com/forms/d/e/1FAIpQLScbnU-lUYaEJSphpMX5ISEYthm_OfrnWbpy04_dGLpVomu9EA/viewform?usp=sf_link]]
 
 🙊 follow me on [[instagram|https://www.instagram.com/jackkytan/]] for news on my ongoing practice, and photos of community life/work and what I'm cooking.
@@ -15277,6 +15287,21 @@ Curated by Amanprit Sandhu</pre>
 </div>
 <div created="20210925114645881" modified="20210925114647122" tags="TableOfContents" title="Writing">
 <pre></pre>
+</div>
+<div created="20211209081210238" modified="20211209093952231" tags="About" title="Writing and press about my work">
+<pre>[[Interview on the Art/Law Network|https://artlawnetwork.org/interview-with-artist-jack-tan/]] with Dr Swastee Ranjan (3 January 2018)
+
+//Logistical Infrastructures and Algorithmic Insitutions// by Stefano Harney in [[Former West: Art and the Contemporary after 1989|https://formerwest.org/Publication]]. Published 10 March 2017
+
+[[Compass Festival: Four Legs Good|https://theculturevulture.co.uk/cultures/compass-festival-four-legs-good/]] - exhibition review by Anna Cale in Culture Vulture (24 Nov 2018)
+
+[[Review of the Singapore Biennale 2016|https://www.japantimes.co.jp/culture/2017/01/28/arts/singapore-biennale-takes-good-hard-look-mirror/]] in the Japan Times (28 January 2017)
+
+[[Karaoke Court: let Craig David and the Carpenters settle your arguments|https://www.theguardian.com/artanddesign/2016/jun/22/karaoke-court-jack-tan-artist-yard-theatre]] - article by Deborah Coughlin in The Guardian (22 June 2016)
+
+
+
+</pre>
 </div>
 
 
